# dirty2data

./: .env.example  .gitignore  AGENTS.md  README.md  composer.json  design-system.md  eslint.config.js  opencode.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json
.github/workflows/: lint.yml
app/Exports/: CleanedDatasetExport.php
app/Jobs/: ProcessAfterQualityScore.php  ProcessDatasetUpload.php
app/Models/: CleaningRecipe.php  Dataset.php  DatasetAiInsight.php  DatasetCleaningRecommendation.php  DatasetQualityScore.php
app/Providers/: FortifyServiceProvider.php
config/: ai.php  services.php
database/factories/: DatasetFactory.php  DatasetQualityScoreFactory.php
database/migrations/: 2026_05_12_000001_create_datasets_table.php  2026_05_12_113004_add_processing_status_to_datasets_table.php  2026_05_12_165952_create_dataset_quality_scores_table.php  2026_05_13_043627_create_cleaning_recipes_table.php  2026_05_13_051338_add_cleaning_snapshots_to_datasets_table.php  2026_05_13_075207_create_dataset_cleaning_recommendations_table.php  2026_05_15_092619_create_dataset_ai_insights_table.php
database/seeders/: UserSeeder.php
python-service/: README.md  pyproject.toml
python-service/app/: __init__.py  main.py  parsing.py  profiling.py  quality_score.py  schemas.py
python-service/dirty2data_python_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python-service/tests/: test_quality_score.py
resources/prompts/: ai-insight-generation.txt  business-insight-generation.txt  cleaning-recommendation.txt
routes/: web.php
(+74 files in other folders)
