[project]
name = "dirty2data-python-service"
version = "0.1.0"
description = "FastAPI data processing service scaffold for dirty2data quality score contracts."
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
